[tool.poetry]
name = "jsonsty"
version = "0.0.1"
description = "JSON Based Cloud Storage for Free"
authors = ["Max Bridgland <mabridgland@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
flask-pymongo = "^2.3.0"
flask-restful = "^0.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
server = "jsonsty:main"